# ultra_tracker

./: .env  .gitignore  .pylintrc  CHANGELOG.rst  Dockerfile  README.md  build_reset.sh  caltopo.py  creds.txt  docker-compose.yml  docker-entrypoint.sh  example_config.yml  pyproject.toml  race.py  requirements.txt  reset.sh  sartopo.py  server.py  setup.cfg  sts.ini  test.py  testing-entrypoint.sh  tox.ini  ultra-tracker.service  uwsgi.ini
.github/workflows/: pylint.yml  pytest.yml  python-app.yml
application/: server.py  utilities.py  uwsgi.ini
application/models/: caltopo.py  course.py  race.py  tracker.py  utils.py  worker.py
application/static/js/: main.js
application/static/styles/: main.css
application/templates/: race_stats.html
changelogs/: changelog.yaml  config.yaml
changelogs/fragments/: summary.yml  timing.yml
dashboards/: tracker.json
grafana/: docker-compose.yml
grafana/dashboards/: interactive_explorer.json  tracker.json
grafana/init/: 002-create-grafana-ro.sh
grafana/provisioning/dashboards/: activities.yml
grafana_init/dashboards/: needs_fixing.json  tracker.json  tracker.yml
grafana_init/datasources/: postgres.yml
misc/: ultra-tracker.service
models/: caltopo.py  course.py  race.py  tracker.py
provisioning/dashboards/: activities.yml
race_configs/: 2024_dark_sky_race_config.yml  2024_devil_dog_100_race_config.yml  2024_eastern_states.yml  2024_ouray_100_race_config.yml  2024_pizza_run_race_config.yml  2024_swammie_shuffle.yml  2024_test_run_patapsco_12.5mi.yml  2024_tor_des_geants_race_config.yml  2025_arizona_monster_300.yml  2025_eastern_states_100.yml  2025_patapsco_100.yml  2025_patapsco_party.yml  2025_patapsco_party_race_config.yml  2025_twot_200.yml  2025_worlds_end_100k.yml  2026_harbor_to_hoye.yml  2026_harbor_to_hoye_race_config.yml  2026_twot_200.yml
scripts/: build_and_start.sh  deploy_service.sh  dump_pings.sh  hard_clean.sh  run_test.sh  ultra-tracker.service
src/ultra_tracker/: __init__.py  _config.py  api.py  application.py  chat.py  database.py  database_utils.py  server.py  socketio_handlers.py  ut_socket.py  utils.py
src/ultra_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ultra_tracker/api/: __init__.py  chat.py  logs.py  pings.py  race.py
src/ultra_tracker/models/: caltopo.py  course.py  race.py  tracker.py
src/ultra_tracker/templates/: admin_dashboard.html  base.html  chat.html  course.html  login.html  logs.html  map.html  pings.html  profile.html  race_stats.html  raw.html  stats.html  user.html
tests/: fixtures.py  test_models_course.py  test_models_race.py  test_models_tracker.py  test_race_01.py  test_race_02.py  test_race_03.py  test_race_04.py  test_race_05.py  test_utilities.py  ultra_tracker_fixtures.py
tests/test_data/01/: elevation_data.json  expected_mile_marks.json  map_data.json  post_log.json  race_config.yml
(+22 files in other folders)
