[metadata]
name = ultra_tracker
version = attr: ultra_tracker.__version__
description = Something

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >=3.13.1
install_requires =
    flask
    geopy
    gpxpy
    jinja2
    lxml
    numpy
    pytz
    pyuwsgi
    pyyaml
    requests
    scipy
    timezonefinder
    uwsgi
    uwsgidecorators

[options.package_data]
ultra_tracker = 
    static/**
    templates/**

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    mypackage = ultra_tracker.server:main
    
[tool:pytest]
testpaths = tests
pythonpath = src
