[metadata]
name = ultra_tracker
version = attr: ultra_tracker.__version__
description = Something

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >=3.13.1
install_requires =
  eventlet
  flask
  flask-socketio
  build
  geopy
  gpxpy
  jinja2
  lxml
  numpy
  pytz
  sqlalchemy
  pyyaml
  requests
  scipy
  timezonefinder


[options.package_data]
ultra_tracker = 
    static/**
    templates/**

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    ultra-tracker = ultra_tracker.server:start_application
    
[tool:pytest]
testpaths = tests
pythonpath = src
